live1/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: silvafigueiredo/debugk8s:latest
        name: debugapp
        ports:
        - containerPort: 5000
